<resources>
    <string name="app_name">Wroute</string>
    <string name="firebase_API_key">AIzaSyAxLF8aKZiWcMJtY0NB9VVDTNe8PU7Uv0k</string>

    // COMMON
    <string name="common_enter_text">Enter text</string>
    <string name="common_previous">Previous</string>
    <string name="common_next">Next</string>

    <string name="common_km">%1d KM</string>
    <string name="common_stops">%1d STOPS</string>
    <string name="common_hrs">%1d HRS</string>
    <string name="common_km_placeholder">- KM</string>
    <string name="common_stops_placeholder">- STOPS</string>
    <string name="common_hrs_placeholder">- HRS</string>

    // LOGIN
    <string name="login_button">Login</string>
    <string name="login_profile_picture_button">ADD PROFILE PICTURE</string>
    <string name="login_profile_first_name_placeholder">FIRST NAME</string>
    <string name="login_profile_last_name_placeholder">LAST NAME</string>
    <string name="login_profile_button">Let\'s GO!</string>

    // MAIN ACTIVITY
    <string name="main_today">Today</string>
    <string name="main_routes">Walking routes</string>

    // FILTER FRAGMENT
    <string name="filter_title">Filters</string>
    <string name="filter_hide_today">Hide today\'s trips</string>
    <string name="filter_type_of_route">Type of route</string>
    <string name="filter_type_of_route_all">All</string>
    <string name="filter_type_of_route_hot">Hot</string>
    <string name="filter_type_of_route_curated">Curated</string>
    <string name="filter_type_of_route_user">User Made</string>
    <string name="filter_type_of_route_friends">Made by friends</string>
    <string name="filter_sort_title">Sort</string>
    <string name="filter_sort_no_sort">No sort</string>
    <string name="filter_sort_created">Created</string>
    <string name="filter_sort_closest">Closest</string>
    <string name="filter_sort_duration">Duration</string>
    <string name="filter_sort_rate">Rate</string>
    <string name="filter_button_apply_filter">Apply filter</string>
    <string name="filter_button_reset_filter">Reset filter</string>

    // AGENDA FRAGMENT
    <string name="agenda_trips">Trips this day</string>
    <string name="agenda_no_trips">There are no trips planned this day</string>

    // START NEW WROUTE
    <string name="newWroute_title">Create a route</string>
    <string name="newWroute_name_hint">Enter name of route</string>
    <string name="newWroute_long_description">Description of route</string>

    <string name="newWroute_transport_mode">Transport mode</string>
    <string name="transport_mode_prompt">Choose transport mode</string>
    <string-array name="transport_modes">
        <item>Walking</item>
        <item>Bicycling</item>
    </string-array>

    <string name="newWroute_time_of_day">BEST TIME TO START</string>
    <string name="newWroute_includes">INCLUDES</string>
    <string name="newWroute_time_of_day_morning">Morning</string>
    <string name="newWroute_time_of_day_afternoon">Afternoon</string>
    <string name="newWroute_time_of_day_evening">Evening</string>
    <string name="newWroute_character_count">%1$d/140</string>
    <string name="newWroute_optional">(optional)</string>
    <string name="newWroute_long_description_hint">Enter a description of the route</string>

    <string name="newWroute_tag_1">Cafe</string>
    <string name="newWroute_tag_2">Restaurant</string>
    <string name="newWroute_tag_3">Drinks</string>
    <string name="newWroute_tag_4">Historic</string>
    <string name="newWroute_tag_5">Local</string>
    <string name="newWroute_tag_6">Tickets</string>

    // STOPS SCREEN
    <string name="stops_first_stop">First Stop</string>
    <string name="stops_end_stop">Final Stop</string>
    <string name="stops_inbetween_stop">STOP #%1$d</string>
    <string name="stops_explanation">USE THE + BUTTON TO ADD NEW STOPS</string>

    // STOP DIALOG
    <string name="stop_dialog_top_title">Create a stop</string>
    <string name="stop_dialog_search_placeholder">Street address, name of location, etc…</string>
    <string name="stop_dialog_title">Title</string>
    <string name="stop_dialog_title_hint">Enter a title for the stop</string>
    <string name="stop_dialog_description">Description</string>
    <string name="stop_dialog_description_hint">Enter a description of the stop</string>
    <string name="stop_dialog_short_stop">Short stop</string>
    <string name="stop_dialog_picture">Add a pic</string>


    <string name="stop_dialog_category">CATEGORY</string>
    <string name="stop_dialog_category_1">Museum</string>
    <string name="stop_dialog_category_2">Building</string>
    <string name="stop_dialog_category_3">Park</string>
    <string name="stop_dialog_category_4">Coffee</string>
    <string name="stop_dialog_category_5">Food</string>
    <string name="stop_dialog_category_6">Drinks</string>
    <string name="stop_dialog_add_stop">SAVE</string>
    <string name="stop_dialog_add_cancel">CANCEL</string>
    <string name="stop_dialog_add_address">ADDRESS</string>

    // MAP SCREEN
    <string name="map_distance_title">Distance</string>
    <string name="map_distance_km">%1$.1f km</string>
    <string name="map_distance_meter">%1$d m</string>
    <string name="map_duration_title">Duration</string>
    <string name="map_duration">%1$dhr %2$dmin</string>

    // FINISH SCREEN
    <string name="finish_explanation">HOW THE ROUTE LOOKS IN THE FEED</string>
    <string name="finish_distance_meter">%1$d m - %2$dhr %3$dmin</string>
    <string name="finish_distance_km">%1$.2f km - %2$dhr %3$dmin</string>
    <string name="finish_distance_end_explanation">PRESS THE + BUTTON TO FINALIZE YOUR ROUTE</string>

    // VIEW WROUTE INFO SCREEN
    <string name="wroute_name">Name of Wroute</string>
    <string name="wroute_description_title">DESCRIPTION</string>
    <string name="wroute_description_hint">LONG DESCRIPTION</string>
    <string name="wroute_includes">INCLUDES</string>
    <string name="wroute_details">DETAILS</string>
    <string name="wroute_starting_point">STARTING POINT</string>
    <string name="wroute_stops">STOPS</string>
    <string name="wroute_best_time_to_start">BEST TIME TO START</string>
    <string name="wroute_temp_addresse_hint">Rosengracht 23</string>
    <string name="wroute_temp_best_time_of_day_hint">Morning, Afternoon</string>
    <string name="wroute_temp_includes_hint">CAFE, OUTDOOR, ART, STREET ART, LUNCH</string>
    <string name="wroute_distance_to_stop">%1$1dm to stop</string>
    <string name="wroute_button_go_to_stop">GO TO STOP</string>

    <!--Font Names-->
    <string name="gotham_light">gotham_light.ttf</string>

</resources>
