<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:nestedScrollingEnabled="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/textview_short_description"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wroute_description_title"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/editText_short_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/wroute_description_hint"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/textview_long_description"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wroute_details"
            android:textSize="12sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/textview_starting_point_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/wroute_starting_point"
                android:textSize="10sp"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/textview_starting_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="@string/wroute_temp_addresse_hint"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="10sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/textview_stops_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/wroute_stops"
                android:textSize="10sp"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/textview_stops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="11"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="10sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/textview_best_time_to_start_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/wroute_best_time_to_start"
                android:textSize="10sp"
                android:textColor="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/textview_best_time_to_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:hint="@string/wroute_temp_best_time_of_day_hint"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="10sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textview_includes_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newWroute_includes"
            android:textSize="12sp"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorPrimary"/>


        <TextView
            android:id="@+id/textview_includes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wroute_temp_includes_hint"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="8dp"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="10sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_add_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@mipmap/ic_add_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.6"/>

</RelativeLayout>