<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".views.activities.MainActivity">

    <data>
        <import type="android.view.View"/>
        <variable name="fragment" type="com.donkeymonkey.wroute.views.fragments.FilterFragment" />
        <variable name="viewModel" type="com.donkeymonkey.wroute.viewmodels.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_title"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/appDarkBlue"
            android:textAllCaps="true"
            android:fontFamily="@font/gotham_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_hide_today"
                android:padding="10dp"
                android:textSize="14sp"
                android:textColor="@color/appDarkBlue"
                android:textAllCaps="true"
                android:fontFamily="@font/gotham_light"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_type_of_route"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/appDarkBlue"
            android:textAllCaps="true"
            android:fontFamily="@font/gotham_bold"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinner_filter_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/transport_modes"
            android:prompt="@string/transport_mode_prompt"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_sort_title"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/appDarkBlue"
            android:textAllCaps="true"
            android:fontFamily="@font/gotham_bold"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinner_filter_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/transport_modes"
            android:prompt="@string/transport_mode_prompt"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_apply_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@color/appDarkBlue"
                android:fontFamily="@font/gotham_medium"
                android:padding="10dp"
                android:text="@string/filter_button_apply_filter"
                android:textColor="@color/appOffWhite"/>


            <Button
                android:id="@+id/button_reset_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_medium"
                android:padding="10dp"
                android:text="@string/filter_button_reset_filter"
                android:textColor="@color/appRed"
                android:textSize="12sp"
                style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        </LinearLayout>



    </LinearLayout>


</layout>