<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearlayout_map_distance_and_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:padding="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_wroute_map_distance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/map_distance_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/textview_wroute_map_distance_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/map_distance_km"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/textview_wroute_map_duration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/map_duration_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/textview_wroute_map_duration_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/map_duration"
            android:textColor="@android:color/darker_gray"/>

    </LinearLayout>

    <fragment
        android:id="@+id/route_map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>