<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".views.activities.CreateWrouteActivity">

    <data>
        <import type="android.view.View"/>
        <variable name="activity" type="com.donkeymonkey.wroute.views.activities.CreateWrouteActivity" />
        <variable name="viewModel" type="com.donkeymonkey.wroute.viewmodels.StopViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:background="@color/appRed">

            <Button
                android:id="@+id/button_add_stop_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/appRed"
                android:text="@string/stop_dialog_add_cancel"
                android:textColor="@android:color/white"
                android:fontFamily="@font/gotham_medium"/>

            <TextView
                android:id="@+id/textview_dialog_stop_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:layout_weight="0.6"
                android:textColor="@android:color/white"
                android:fontFamily="@font/gotham_light"
                android:textAlignment="center"
                android:textSize="30sp"
                android:text="@string/stop_dialog_top_title"/>

            <Button
                android:id="@+id/button_add_stop"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/appRed"
                android:text="@string/stop_dialog_add_stop"
                android:textColor="@android:color/white"
                android:fontFamily="@font/gotham_medium"/>

        </LinearLayout>

        <fragment
            android:id="@+id/stop_dialog_map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            class="com.google.android.gms.maps.SupportMapFragment"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_dialog_search_placeholder"
            android:textAlignment="center"
            android:fontFamily="@font/gotham_light"/>

        <!--<ImageView-->
            <!--android:id="@+id/add_stop_line"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@android:color/darker_gray"-->
            <!--android:contentDescription="line"/>-->

        <LinearLayout
            android:id="@+id/stop_dialog_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearlayout_dialog_stop_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_dialog_stop_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="6dp"
                    android:gravity="center_vertical"
                    android:text="@string/stop_dialog_title"
                    android:textColor="@color/appRed"
                    android:textSize="12sp"
                    android:fontFamily="@font/gotham_bold"/>

                <EditText
                    android:id="@+id/editText_dialog_stop_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.38"
                    android:hint="@string/stop_dialog_title_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="3"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:fontFamily="@font/gotham_light"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_dialog_stop_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_dialog_stop_description"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/stop_dialog_description"
                        android:textColor="@color/appRed"
                        android:textSize="12sp"
                        android:fontFamily="@font/gotham_bold"/>

                    <TextView
                        android:id="@+id/textview_long_optional"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:text="@string/newWroute_optional"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp"
                        android:fontFamily="@font/gotham_light"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/editText_dialog_stop_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/stop_dialog_description_hint"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="3"
                    android:textColor="@android:color/darker_gray"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="12sp"
                    android:fontFamily="@font/gotham_light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:layout_gravity="center">

                    <Button
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:text="+"
                        android:textColor="@color/appOffWhite"
                        android:textSize="25sp"
                        android:background="@color/appDarkBlue"
                        android:layout_marginBottom="5dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/stop_dialog_picture"
                        android:textAlignment="center"
                        android:fontFamily="@font/gotham_light"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_vertical">

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/short_stop_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:checked="false"
                        android:layout_gravity="center"
                        android:textColorLink="@color/colorPrimary"
                        app:theme="@style/ShortStopSwitch"/>

                    <TextView
                        android:id="@+id/textview_short_stop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:textAlignment="center"
                        android:text="@string/stop_dialog_short_stop"
                        android:fontFamily="@font/gotham_light"/>

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>

    </LinearLayout>



</layout>